--- a/styles.css
+++ b/styles.css
@@ -21,10 +21,10 @@ h1 {
 #message{
 width: 100%;
 font-size: 2em;
-color: blue;
+color: red;
 text-align: center;
 position: absolute;
-top:20px;
+top:40px;
 left: 0;
 }
 canvas{
