--- a/styles.css
+++ b/styles.css
@@ -7,8 +7,8 @@ body {
     background-size: cover;
     background-position: center; /* Center the background image */
     background-repeat: no-repeat;
-    height: 150vh; /* Ensure the body takes up the full viewport height */
-    color: #fff; /* Set text color to white for better visibility on a dark background */
+    height: 80vh; /* Ensure the body takes up the full viewport height */
+    color: red; /* Set text color to white for better visibility on a dark background */
 }
 
 h1 {
@@ -16,12 +16,15 @@ h1 {
     padding: 50px;
     margin-top: 0px; /* Adjust the margin to center the heading vertically */
 }
+h2 {
+    margin-top: 0px;
+}
 
 
 #message{
 width: 100%;
 font-size: 2em;
-color: red;
+color: hotpink;
 text-align: center;
 position: absolute;
 top:40px;
